fixes spaces and alignment

--- a/web-gui/src/app/page-components/course-detail/course-detail.component.scss
+++ b/web-gui/src/app/page-components/course-detail/course-detail.component.scss
@@ -44,7 +44,7 @@
     margin: 0 2.5px;
     height: 30px;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     .mat-icon {
       height: 25px;
@@ -80,14 +80,10 @@
   justify-content: right;
 }
 
-.create-task {
-  justify-content: center;
-  color: #fff;
-  margin-top: 2%;
-}
-
 .mat-form-field {
-  justify-content: left;
+  justify-content: center;
+  padding: 0px;
+  margin: 0px;
 }
 
 #settings {
@@ -114,4 +110,8 @@
 
 .mat-expansion-panel-header {
   flex-basis: 0;
+}
+
+.create-task {
+  margin-left: 38%;
 }
