--- a/web-gui/src/app/page-components/task-detail/task-detail.component.scss
+++ b/web-gui/src/app/page-components/task-detail/task-detail.component.scss
@@ -109,11 +109,11 @@ mat-radio-button {
 
 .details {
   width: 80%;
-  margin-top: 12px;
+  margin-top: 50px;
 }
 
 .task-container {
-  //width: 80%;
+  // width: 80%;
   margin-bottom: 12px;
   display: flex;
   justify-content: space-between;
